--- a/Les 9 - Homework.html
+++ b/Les 9 - Homework.html
@@ -5,7 +5,7 @@
 <title>SPARKX BELGIUM HASSELT</title>
 </head>
 <body>
-<img src="file:///C:/Users/ascho/OneDrive/Documents/NHA%20Cursus%202026/Les%209%20-%20huiswerkopdracht/Afbeeldingen/Sparkx-header2.jpg" width="200" height="100">
+<img src="Sparkx-header2.jpg" width="200" height="100">
 <header><h1>Welcome to Sparkx Belgium</h1></header>
 <nav>
 <a href="Index.html">Index</a>
@@ -14,4 +14,5 @@
 </nav>
 <hr>
 </body>
+
 </html>
