--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="file:///C:/Users/ascho/OneDrive/Documents/NHA%20Cursus%202026/Les%209%20-%20huiswerkopdracht/Afbeeldingen/Sparkx-header2.jpg" alt="" width="200" height="100">
+    <img src="Sparkx-header2.jpg" width="200" height="100">" alt="" width="200" height="100">
     <h3>About Sparkx Hasselt</h3>
 </header>
 <p><b>Fly without a parachute</b>
@@ -19,4 +19,5 @@ you'll feel simulated wind and real G-forces as you drop down at lightning speed
 <hr>
 <iframe src="https://hasselt.sparkx.com/het-park/sportbelevingen/wingsuit/" width="450" height="750"></iframe>
 </body>
+
 </html>
