--- a/galerij.html
+++ b/galerij.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="file:///C:/Users/ascho/OneDrive/Documents/NHA%20Cursus%202026/Les%209%20-%20huiswerkopdracht/Afbeeldingen/Sparkx-header2.jpg" alt="" width="200" height="100">
+    <img src="Sparkx-header2.jpg" width="200" height="100"> alt="" width="200" height="100">
     <h3>Wingsuit Sparkx Hasselt</h3>
 </header>
 <img src="Afbeeldingen/Sparkx_Wingsuit 4.jpg" width="200" height="200">
@@ -16,4 +16,5 @@
 <audio controls src="Geluiden/file_example_MP3_700KB.mp3"></audio>
 <hr>
 </body>
+
 </html>
