--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="file:///C:/Users/ascho/OneDrive/Documents/NHA%20Cursus%202026/Les%209%20-%20huiswerkopdracht/Afbeeldingen/Sparkx-header2.jpg" alt="" width="200" height="100">
+    <img src="Sparkx-header2.jpg" width="200" height="100"> alt="" width="200" height="100">
     <h4>SPARKX HASSELT IN BELGIUM</h4>
 </header>
 <p><b><h2>Opening Hours & Crowds</h2></b></p>
@@ -19,4 +19,5 @@
 <p><b><h2>COME AND ENJOY</h2></b></p>
 <video controls src="<iframe width="560" height="315" src="https://www.youtube.com/embed/MYAVPWut-ao?si=bGCIIrDQwbUZK204" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
 </html>
