--- a/galerij.html
+++ b/galerij.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="Sparkx-header2.jpg" width="200" height="100"> alt="" width="200" height="100">
+    <img src="Sparkx-header2.jpg" width="200" height="100">
     <h3>Wingsuit Sparkx Hasselt</h3>
 </header>
 <img src="Afbeeldingen/Sparkx_Wingsuit 4.jpg" width="200" height="200">
@@ -18,3 +18,4 @@
 </body>
 
 </html>
+
