--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="Sparkx-header2.jpg" width="200" height="100"> alt="" width="200" height="100">
+    <img src="Sparkx-header2.jpg" width="200" height="100">
     <h4>SPARKX HASSELT IN BELGIUM</h4>
 </header>
 <p><b><h2>Opening Hours & Crowds</h2></b></p>
@@ -21,3 +21,4 @@
 </body>
 
 </html>
+
