--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <img src="Sparkx-header2.jpg" width="200" height="100">"
+    <img src="Sparkx-header2.jpg" width="200" height="100">
     <h3>About Sparkx Hasselt</h3>
 </header>
 <p><b>Fly without a parachute</b>
@@ -21,4 +21,5 @@ you'll feel simulated wind and real G-forces as you drop down at lightning speed
 </body>
 
 </html>
+
 
