--- a/galerij.html
+++ b/galerij.html
@@ -9,13 +9,14 @@
     <img src="Sparkx-header2.jpg" width="200" height="100">
     <h3>Wingsuit Sparkx Hasselt</h3>
 </header>
-<img src="Afbeeldingen/Sparkx_Wingsuit 4.jpg" width="200" height="200">
-<img src="Afbeeldingen/Sparkx Wingsuit-467x830.jpg" width="200" height="200">
-<img src="Afbeeldingen/TristanMeers_SparkxGent_034.jpg" width="200" height="200">
+<img src="Sparkx_Wingsuit 4.jpg" width="200" height="200">
+<img src="Sparkx Wingsuit-467x830.jpg" width="200" height="200">
+<img src="TristanMeers_SparkxGent_034.jpg" width="200" height="200">
 <hr>
-<audio controls src="Geluiden/file_example_MP3_700KB.mp3"></audio>
+<audio controls src="file_example_MP3_700KB.mp3"></audio>
 <hr>
 </body>
 
 </html>
+
 
